--- a/doc/logit.Rnw
+++ b/doc/logit.Rnw
@@ -17,7 +17,7 @@ We are interested in modeling multivariate binary outcomes ($n$ observations and
 One way to model this is to use a probit model (this is suggested in the Stan manual; it is different from the mixed model trick but I'll get to that later):
 \begin{equation}
 \begin{aligned}
-y_{n,k} &= 1(z_{n,k} > 1)\\
+y_{n,k} &= 1(z_{n,k} > 0)\\
 z_{n} &= x_n \beta + \epsilon_{n}\\
 \epsilon_{n} &\sim \mathrm{N}(0, R)
 \end{aligned}
@@ -26,7 +26,7 @@ where $R$ is a correlation matrix (with 1's on the diagonals).
 While this is a convenient way of modeling multivariate binary outcomes, its parameters are difficult to interpret. Instead, the multivariate logistic regression model proposed by \cite{o2004bayesian} allows marginal distributions to follow a logistic distribution; the parameters of this model can be easily translated to odds ratio:
 \begin{equation}
 \begin{aligned}
-y_{n,k} &= 1(z_{n,k} > 1)\\
+y_{n,k} &= 1(z_{n,k} > 0)\\
 z_{n} &= x_n \beta + \log[F_\nu(e_n)/\{1 - F_\nu(e_n)\}]\\
 e_n &\sim \mathrm{t}(0, \nu, R)
 \end{aligned}
@@ -139,7 +139,7 @@ apply(ee$Omega, 2:3, wquant, weights=weights, probs=0.975)
 \cite{o2004bayesian} suggests using a t distribution for approximating the multivariate logit distribution but we can also use the probit model. Instead of using (1), we can rewrite it as 
 \begin{equation}
 \begin{aligned}
-y_{n,k} &= 1(z_{n,k} > 1)\\
+y_{n,k} &= 1(z_{n,k} > 0)\\
 z_{n} &= x_n \beta + \epsilon_{n}\\
 \epsilon_{n} &\sim \mathrm{N}(0, \sigma^2 R)
 \end{aligned}
@@ -188,7 +188,7 @@ We can also use the mixed model trick to model multivariate binary outcomes. The
 I think this model is equivalent (???) to letting 
 \begin{equation}
 \begin{aligned}
-y_{n,k} &= 1(z_{n,k} > 1)\\
+y_{n,k} &= 1(z_{n,k} > 0)\\
 z_{n,k} &\sim \mathcal L(x_{n} \beta_k + \epsilon_n) \\
 \epsilon_n &\sim \mathrm{N}(0, \sigma^2 R),
 \end{aligned}
@@ -249,8 +249,28 @@ In other words, if we use a mixed model trick where the underlying variance is a
 $$
 s =  \sqrt{1 + \frac{3\sigma^2}{\pi^2}}.
 $$
-This should (approximately) get us to the correct log-odds scale. Or we can even incorporate this value into our estimation process and apply importance sampling later.
+This should (approximately) get us to the correct log-odds scale. Or we can even incorporate this value into our estimation process and apply importance sampling later (but this approximation seems good enough).
 
+<<>>=
+## mixed model mean probability
+mean(rlogis(10000, 2 + rnorm(10000, sd=1)) > 0)
+## approximation
+plogis(2/sqrt(1 + 3/pi^2))
+
+## same example with different underlying variance of a normal distribution
+## mixed model mean probability
+mean(rlogis(10000, 2 + rnorm(10000, sd=2)) > 0)
+## approximation
+plogis(2/sqrt(1 + 4 * 3/pi^2))
+@
+
+These distributions are slightly different (which explains why the approximation doesn't work exactly)...
+
+<<fig.height=4, fig.width=6>>=
+plot(density(rlogis(10000, 2 + rnorm(10000, sd=2))))
+curve(dlogis(x, 2, scale=sqrt(1 + 4 * 3/pi^2)), add=TRUE, col=2)
+curve(dnorm(x, 2, sd=sqrt(pi^2/3 + 4)), add=TRUE, col=3)
+@
 
 
 \bibliography{logit}
